# UltimateAirborneBattle

./: .gitignore  CMakeLists.txt  LICENSE  UltimateAirborneBattle.sln
Resources/: actors.xml  resources.json  resources.xml
Resources/animations/: darkSmoke-animation.json  explosion-animation.json  playerOne-animation.json  playerTwo-animation.json
Resources/inputs/: contextMapping.xml  inputs.xml  inputs_game.xml
Resources/sprites/: background-sprite.json  bomb-sprite.json  missile-sprite.json  plusOne-sprite.json  smoke-sprite.json
Sources/: C_animation.h  C_collider.h  C_explosion.h  C_inputHandler.h  C_missile.h  C_particuleEmitter.h  C_player.h  C_playerInputHandler.h  C_plusOne.h  C_rendereable2D.h  C_rigidbody.h  C_screenPosition.h  C_shape.h  C_sprite.h  C_transform.h  Components.cpp  IParticule.cpp  IParticule.h  P_animation.cpp  P_animation.h  P_animationRenderer.cpp  P_animationRenderer.h  P_collider.cpp  P_collider.h  P_colliderManager.cpp  P_colliderManager.h  P_explosion.cpp  P_explosion.h  P_gameManager.cpp  P_gameManager.h  P_inputHandler.cpp  P_inputHandler.h  P_particuleEmitter.cpp  P_particuleEmitter.h  P_particuleManager.cpp  P_particuleManager.h  P_particuleRenderer.cpp  P_particuleRenderer.h  P_physic.cpp  P_physic.h  (+25 more)
Sources/processes/: P_animation.cpp  P_colliderManager.cpp  P_explosion.cpp  P_particuleManager.cpp  P_player.cpp  P_plusOne.cpp  P_rendereable2D.cpp
include/: C_particuleEmitter.h  IParticule.h  P_plusOne.h  P_spriteRenderer.h  UAB_defines.h  UAB_events.h  UAB_gameScene.h  UAB_scoreScene.h  collisions_utils.h
include/components/: C_animation.h  C_collider.h  C_explosion.h  C_missile.h  C_particuleEmitter.h  C_player.h  C_plusOne.h  C_rendereable2D.h  C_rigidbody.h  C_sprite.h  C_transform.h
include/processes/: P_animation.h  P_colliderManager.h  P_explosion.h  P_particuleManager.h  P_physic.h  P_player.h  P_plusOne.h  P_rendereable2D.h  P_screenPosition.h  P_spriteRenderer.h
include/scenes/: UAB_MainMenuScene.h  UAB_gameScene.h  UAB_scoreScene.h  gameplayScene.h  mainMenuScene.h  pauseScene.h  titleScene.h  victoryScene.h
resources/: actors.json  actors.lua  method1.lua  resources.json  test.lua
resources/animations/: darkSmoke-animation.json  playerOne-animation.json
resources/inputs/: contextMapping.json  contextMapping.xml
resources/sprites/: background-sprite.json  bomb-sprite.json  missile-sprite.json
sources/: Components.cpp  IParticule.cpp  UAB_defines.cpp  collisions_utils.cpp  main.cpp
sources/processes/: P_animation.cpp  P_colliderManager.cpp  P_explosion.cpp  P_particuleManager.cpp  P_physic.cpp  P_player.cpp  P_plusOne.cpp  P_rendereable2D.cpp
